jupyterhub/azure-mount.yaml
apiVersion: v1
kind: Pod
metadata:
 name: mounting-test-3
spec:
 containers:
  - image: kubernetes/pause
    name: azure-test
    securityContext:
      capabilities:
        add: ["SYS_ADMIN", "DAC_READ_SEARCH"]
    volumeMounts:
      - name: azure
        mountPath: /mnt/azure
 volumes:
  - name: azure
    persistentVolumeClaim:
      claimName: test-pvc
