jupyterhub/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod2
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 8080
    volumeMounts:
    - mountPath: /mnt/data
      name: volume-test
  volumes:
  - name: volume-test
    persistentVolumeClaim:
      claimName: uis-pvc
  hostNetwork: true
