jupyterhub/blockchain-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: blockchain-service
spec:
   clusterIP: None
   ports:
   - protocol: TCP
     port: 3000
     targetPort: 3000
   type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: blockchain-service
subsets:
  - addresses:
      - ip: 51.120.92.107
    ports:
      - port: 3000
