jupyterhub/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo
  namespace: jhub
spec:
  ingressClassName: nginx
  rules:
    - host: argo.thesis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  number: 31324
