jupyterhub/ingress-jupyterhub.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  namespace: jhub
spec:
  ingressClassName: nginx
  rules:
    - host: jupyterhub.thesis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 30299
